exports[`no-mock-module-after-import > invalid(1): import {test, mock} from 'node:test';\nimport value from 'module.js';\nmock.module('module.js'); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import value from 'module.js';
  3 | mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(1): import {test, mock} from 'node:test';\nimport value from 'module.js';\nmock.module('module.js'); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import value from 'module.js';
> 3 | mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(10): import {mock as moduleMock} from 'node:test';\nimport 'module.js';\nmoduleMock.module('module.js'); 1`] = `

  1 | import {mock as moduleMock} from 'node:test';
  2 | import 'module.js';
  3 | moduleMock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(10): import {mock as moduleMock} from 'node:test';\nimport 'module.js';\nmoduleMock.module('module.js'); 2`] = `

Message:
  1 | import {mock as moduleMock} from 'node:test';
  2 | import 'module.js';
> 3 | moduleMock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(11): import * as nodeTest from 'node:test';\nimport 'module.js';\nnodeTest.mock.module('module.js'); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | import 'module.js';
  3 | nodeTest.mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(11): import * as nodeTest from 'node:test';\nimport 'module.js';\nnodeTest.mock.module('module.js'); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | import 'module.js';
> 3 | nodeTest.mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(12): import test from 'node:test';\nimport 'module.js';\ntest.mock.module('module.js'); 1`] = `

  1 | import test from 'node:test';
  2 | import 'module.js';
  3 | test.mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(12): import test from 'node:test';\nimport 'module.js';\ntest.mock.module('module.js'); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import 'module.js';
> 3 | test.mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(13): import {test} from 'node:test';\nimport 'module.js';\ntest.mock.module('module.js'); 1`] = `

  1 | import {test} from 'node:test';
  2 | import 'module.js';
  3 | test.mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(13): import {test} from 'node:test';\nimport 'module.js';\ntest.mock.module('module.js'); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | import 'module.js';
> 3 | test.mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(14): import {it} from 'node:test';\nimport 'module.js';\nit.mock.module('module.js'); 1`] = `

  1 | import {it} from 'node:test';
  2 | import 'module.js';
  3 | it.mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(14): import {it} from 'node:test';\nimport 'module.js';\nit.mock.module('module.js'); 2`] = `

Message:
  1 | import {it} from 'node:test';
  2 | import 'module.js';
> 3 | it.mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(15): import {test} from 'node:test';\nimport 'module.js';\ntest('mock', t => {\n\tt.mock.module('module.js');\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | import 'module.js';
  3 | test('mock', t => {
  4 | 	t.mock.module('module.js');
  5 | });

`;

exports[`no-mock-module-after-import > invalid(15): import {test} from 'node:test';\nimport 'module.js';\ntest('mock', t => {\n\tt.mock.module('module.js');\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | import 'module.js';
  3 | test('mock', t => {
> 4 | 	t.mock.module('module.js');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.
  5 | });

`;

exports[`no-mock-module-after-import > invalid(16): import {test} from 'node:test';\nimport 'module.js';\ntest('mock', (t = fallback) => {\n\tt.mock.module('module.js');\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | import 'module.js';
  3 | test('mock', (t = fallback) => {
  4 | 	t.mock.module('module.js');
  5 | });

`;

exports[`no-mock-module-after-import > invalid(16): import {test} from 'node:test';\nimport 'module.js';\ntest('mock', (t = fallback) => {\n\tt.mock.module('module.js');\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | import 'module.js';
  3 | test('mock', (t = fallback) => {
> 4 | 	t.mock.module('module.js');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.
  5 | });

`;

exports[`no-mock-module-after-import > invalid(17): import {getTestContext} from 'node:test';\nimport 'module.js';\ngetTestContext().mock.module('module.js'); 1`] = `

  1 | import {getTestContext} from 'node:test';
  2 | import 'module.js';
  3 | getTestContext().mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(17): import {getTestContext} from 'node:test';\nimport 'module.js';\ngetTestContext().mock.module('module.js'); 2`] = `

Message:
  1 | import {getTestContext} from 'node:test';
  2 | import 'module.js';
> 3 | getTestContext().mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(18): import {getTestContext as context} from 'node:test';\nimport 'module.js';\ncontext().mock.module('module.js'); 1`] = `

  1 | import {getTestContext as context} from 'node:test';
  2 | import 'module.js';
  3 | context().mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(18): import {getTestContext as context} from 'node:test';\nimport 'module.js';\ncontext().mock.module('module.js'); 2`] = `

Message:
  1 | import {getTestContext as context} from 'node:test';
  2 | import 'module.js';
> 3 | context().mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(19): import * as nodeTest from 'node:test';\nimport 'module.js';\nnodeTest.getTestContext().mock.module('module.js'); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | import 'module.js';
  3 | nodeTest.getTestContext().mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(19): import * as nodeTest from 'node:test';\nimport 'module.js';\nnodeTest.getTestContext().mock.module('module.js'); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | import 'module.js';
> 3 | nodeTest.getTestContext().mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(2): import {test, mock} from 'node:test';\nimport {value} from 'module.js';\nmock.module('module.js'); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {value} from 'module.js';
  3 | mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(2): import {test, mock} from 'node:test';\nimport {value} from 'module.js';\nmock.module('module.js'); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import {value} from 'module.js';
> 3 | mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(20): import * as nodeTest from 'node:test';\nimport 'module.js';\nnodeTest.test('mock', context => {\n\tcontext.mock.module('module.js');\n}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | import 'module.js';
  3 | nodeTest.test('mock', context => {
  4 | 	context.mock.module('module.js');
  5 | });

`;

exports[`no-mock-module-after-import > invalid(20): import * as nodeTest from 'node:test';\nimport 'module.js';\nnodeTest.test('mock', context => {\n\tcontext.mock.module('module.js');\n}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | import 'module.js';
  3 | nodeTest.test('mock', context => {
> 4 | 	context.mock.module('module.js');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.
  5 | });

`;

exports[`no-mock-module-after-import > invalid(21): import {getTestContext} from 'node:test';\nimport 'module.js';\n(getTestContext() as TestContext).mock.module('module.js'); 1`] = `

  1 | import {getTestContext} from 'node:test';
  2 | import 'module.js';
  3 | (getTestContext() as TestContext).mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(21): import {getTestContext} from 'node:test';\nimport 'module.js';\n(getTestContext() as TestContext).mock.module('module.js'); 2`] = `

Message:
  1 | import {getTestContext} from 'node:test';
  2 | import 'module.js';
> 3 | (getTestContext() as TestContext).mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(22): import {getTestContext} from 'node:test';\nimport 'module.js';\ngetTestContext()!.mock.module('module.js'); 1`] = `

  1 | import {getTestContext} from 'node:test';
  2 | import 'module.js';
  3 | getTestContext()!.mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(22): import {getTestContext} from 'node:test';\nimport 'module.js';\ngetTestContext()!.mock.module('module.js'); 2`] = `

Message:
  1 | import {getTestContext} from 'node:test';
  2 | import 'module.js';
> 3 | getTestContext()!.mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(23): import {getTestContext} from 'node:test';\nimport 'module.js';\n(getTestContext as typeof getTestContext)().mock.module('module.js'); 1`] = `

  1 | import {getTestContext} from 'node:test';
  2 | import 'module.js';
  3 | (getTestContext as typeof getTestContext)().mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(23): import {getTestContext} from 'node:test';\nimport 'module.js';\n(getTestContext as typeof getTestContext)().mock.module('module.js'); 2`] = `

Message:
  1 | import {getTestContext} from 'node:test';
  2 | import 'module.js';
> 3 | (getTestContext as typeof getTestContext)().mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(24): import {test, mock} from 'node:test';\nimport 'module.js';\ntest('outer', t => {\n\tt.test('inner', context => {\n\t\tcontext.mock.module('module.js');\n\t});\n}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | test('outer', t => {
  4 | 	t.test('inner', context => {
  5 | 		context.mock.module('module.js');
  6 | 	});
  7 | });

`;

exports[`no-mock-module-after-import > invalid(24): import {test, mock} from 'node:test';\nimport 'module.js';\ntest('outer', t => {\n\tt.test('inner', context => {\n\t\tcontext.mock.module('module.js');\n\t});\n}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | test('outer', t => {
  4 | 	t.test('inner', context => {
> 5 | 		context.mock.module('module.js');
    | 		^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.
  6 | 	});
  7 | });

`;

exports[`no-mock-module-after-import > invalid(25): import {beforeEach} from 'node:test';\nimport 'module.js';\nbeforeEach(t => {\n\tt.mock.module('module.js');\n}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | import 'module.js';
  3 | beforeEach(t => {
  4 | 	t.mock.module('module.js');
  5 | });

`;

exports[`no-mock-module-after-import > invalid(25): import {beforeEach} from 'node:test';\nimport 'module.js';\nbeforeEach(t => {\n\tt.mock.module('module.js');\n}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | import 'module.js';
  3 | beforeEach(t => {
> 4 | 	t.mock.module('module.js');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.
  5 | });

`;

exports[`no-mock-module-after-import > invalid(26): import {test, mock} from 'node:test';\nimport 'module.js';\ntest('outer', t => {\n\tt.beforeEach(context => {\n\t\tcontext.mock.module('module.js');\n\t});\n}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | test('outer', t => {
  4 | 	t.beforeEach(context => {
  5 | 		context.mock.module('module.js');
  6 | 	});
  7 | });

`;

exports[`no-mock-module-after-import > invalid(26): import {test, mock} from 'node:test';\nimport 'module.js';\ntest('outer', t => {\n\tt.beforeEach(context => {\n\t\tcontext.mock.module('module.js');\n\t});\n}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | test('outer', t => {
  4 | 	t.beforeEach(context => {
> 5 | 		context.mock.module('module.js');
    | 		^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.
  6 | 	});
  7 | });

`;

exports[`no-mock-module-after-import > invalid(27): import {test, mock} from 'node:test';\nimport {type Type, value} from 'module.js';\nmock.module('module.js' as string); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {type Type, value} from 'module.js';
  3 | mock.module('module.js' as string);

`;

exports[`no-mock-module-after-import > invalid(27): import {test, mock} from 'node:test';\nimport {type Type, value} from 'module.js';\nmock.module('module.js' as string); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import {type Type, value} from 'module.js';
> 3 | mock.module('module.js' as string);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(28): import {test, mock} from 'node:test';\nimport 'module.js';\n(mock as typeof mock).module('module.js'); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | (mock as typeof mock).module('module.js');

`;

exports[`no-mock-module-after-import > invalid(28): import {test, mock} from 'node:test';\nimport 'module.js';\n(mock as typeof mock).module('module.js'); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
> 3 | (mock as typeof mock).module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(29): import test from 'node:test';\nimport 'module.js';\n(test as typeof test).mock.module('module.js'); 1`] = `

  1 | import test from 'node:test';
  2 | import 'module.js';
  3 | (test as typeof test).mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(29): import test from 'node:test';\nimport 'module.js';\n(test as typeof test).mock.module('module.js'); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import 'module.js';
> 3 | (test as typeof test).mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(3): import {test, mock} from 'node:test';\nimport * as module from 'module.js';\nmock.module('module.js'); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import * as module from 'module.js';
  3 | mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(3): import {test, mock} from 'node:test';\nimport * as module from 'module.js';\nmock.module('module.js'); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import * as module from 'module.js';
> 3 | mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(30): import {test, mock} from 'node:test';\nimport 'module.js';\ntest('mock', t => {\n\t(t as TestContext).mock.module('module.js');\n}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | test('mock', t => {
  4 | 	(t as TestContext).mock.module('module.js');
  5 | });

`;

exports[`no-mock-module-after-import > invalid(30): import {test, mock} from 'node:test';\nimport 'module.js';\ntest('mock', t => {\n\t(t as TestContext).mock.module('module.js');\n}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | test('mock', t => {
> 4 | 	(t as TestContext).mock.module('module.js');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.
  5 | });

`;

exports[`no-mock-module-after-import > invalid(4): import {test, mock} from 'node:test';\nimport 'module.js';\nmock.module('module.js'); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(4): import {test, mock} from 'node:test';\nimport 'module.js';\nmock.module('module.js'); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
> 3 | mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(5): import {test, mock} from 'node:test';\nimport {} from 'module.js';\nmock.module('module.js'); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {} from 'module.js';
  3 | mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(5): import {test, mock} from 'node:test';\nimport {} from 'module.js';\nmock.module('module.js'); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import {} from 'module.js';
> 3 | mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(6): import {test, mock} from 'node:test';\nmock.module('module.js');\nimport 'module.js'; 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.module('module.js');
  3 | import 'module.js';

`;

exports[`no-mock-module-after-import > invalid(6): import {test, mock} from 'node:test';\nmock.module('module.js');\nimport 'module.js'; 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.
  3 | import 'module.js';

`;

exports[`no-mock-module-after-import > invalid(7): import {test, mock} from 'node:test';\nimport 'module.js';\nmock.module(\`module.js\`); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | mock.module(\`module.js\`);

`;

exports[`no-mock-module-after-import > invalid(7): import {test, mock} from 'node:test';\nimport 'module.js';\nmock.module(\`module.js\`); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
> 3 | mock.module(\`module.js\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(8): import {test, mock} from 'node:test';\nimport 'module.js';\nconst moduleName = 'module.js';\nmock.module(moduleName); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | const moduleName = 'module.js';
  4 | mock.module(moduleName);

`;

exports[`no-mock-module-after-import > invalid(8): import {test, mock} from 'node:test';\nimport 'module.js';\nconst moduleName = 'module.js';\nmock.module(moduleName); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | import 'module.js';
  3 | const moduleName = 'module.js';
> 4 | mock.module(moduleName);
    | ^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;

exports[`no-mock-module-after-import > invalid(9): import {mock} from 'test';\nimport 'module.js';\nmock.module('module.js'); 1`] = `

  1 | import {mock} from 'test';
  2 | import 'module.js';
  3 | mock.module('module.js');

`;

exports[`no-mock-module-after-import > invalid(9): import {mock} from 'test';\nimport 'module.js';\nmock.module('module.js'); 2`] = `

Message:
  1 | import {mock} from 'test';
  2 | import 'module.js';
> 3 | mock.module('module.js');
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.module()\` cannot affect \`module.js\` because it was already imported statically.

`;
